# chaca-scanner

./: .gitignore  README.md  index.html  package-lock.json  package.json
.cursor/agents/: securescan-dev.md
.cursor/rules/: cursor-agent-orchestration.mdc  cursor-tools-mastery.mdc  minimax-m2-core.mdc  model-compatibility.mdc
.cursor/skills/anti-slop-design/: SKILL.md
.cursor/skills/deep-research/: SKILL.md  reference.md
.github/workflows/: release.yml
specs/: index.md
specs/active/: .session-log.txt
specs/active/security-scanner/: full-prd.md  quick-prd.md
specs/todo-roadmap/security-scanner/: execution-log.md  roadmap.json  roadmap.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  license.rs  main.rs
src-tauri/src/scanner/: active.rs  cms.rs  crawler.rs  domain.rs  engine.rs  folder_scanner.rs  mod.rs  passive.rs  recon.rs
src-tauri/src/scanner/rules/: api_exposure.rs  data_exposure.rs  exposed_services.rs  info_disclosure.rs  mod.rs  owasp.rs  vuln_db.rs
src/api/: scan.ts
src/components/: ProGate.tsx  ReportViewer.tsx  ScanInput.tsx  ScanProgress.tsx
src/components/dashboard/: DotProgressBar.tsx  ReportCard.tsx  ScanChart.tsx  ScanDashboard.tsx  ScanHistory.tsx  StatsGrid.tsx  TargetIntelligence.tsx  VulnerabilityGrid.tsx
src/components/layout/: AppShell.tsx  AppSidebar.tsx  ScanHeader.tsx
src/store/: licenseStore.ts  presetStore.ts  scanStore.ts  settingsStore.ts
src/utils/: export.ts
(+2 files in other folders)
