[package]
name = "securescan"
version = "0.6.0"
description = "A user-friendly security scanner for vibe coders and developers"
authors = ["Aris Setiawan"]
edition = "2021"

[lib]
name = "securescan_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
regex = "1"
url = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tauri-plugin-store = "2"
base64 = "0.22"
walkdir = "2"
tauri-plugin-dialog = "2"
chrono = { version = "0.4", features = ["serde"] }
